# proiect-ml-MariaBengheac

./: .gitignore  pyproject.toml
app/: app.py
app/pages/: 1_Clasificare.py  2_Regresie.py
notebooks/: classification.ipynb  regression.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
reports/tables/: classification_best_params.joblib  regression_best_params.joblib
src/: data.py  evaluation.py  models.py
