[project]
name = "ml-proiect"
version = "0.1.0"
description = "Proiect Machine Learning - regresie si clasificare"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.10",
    "interpret>=0.7.8",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scikit-optimize>=0.10.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "streamlit>=1.57.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
